--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <%- include("/home/luca/Desktop/backend/BloggingApp/partials/head") %>
+    <%- include("../partials/head") %>
         <title>HomePage</title>
 </head>
 
 <body>
-    <%- include("/home/luca/Desktop/backend/BloggingApp/partials/nav.ejs") %>
+    <%- include("../partials/nav.ejs") %>
         <div class="container m-4">
             <form method="POST" action="/blog" enctype="multipart/form-data">
                 <div class="mb-3">
@@ -32,7 +32,7 @@
 
         </div>
 
-        <%- include('/home/luca/Desktop/backend/BloggingApp/partials/script') %>
+        <%- include('../partials/script') %>
 </body>
 
 </html>
