--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <%- include("/home/luca/Desktop/backend/BloggingApp/partials/head") %>
+    <%- include("../partials/head") %>
         <title>HomePage</title>
 </head>
 
 <body>
-    <%- include("/home/luca/Desktop/backend/BloggingApp/partials/nav.ejs") %>
+    <%- include("../partials/nav.ejs") %>
         <div class="container m-10 row row-cols-2">
             <% blogs.forEach(blog=> {%>
                 <div class="col">
@@ -23,7 +23,7 @@
                 </div>
                 <% }); %>
         </div>
-        <%- include('/home/luca/Desktop/backend/BloggingApp/partials/script') %>
+        <%- include('../partials/script') %>
 </body>
 
 </html>
