--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -1,48 +1,89 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark " data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Blogify</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+<nav class="bg-gray-900 text-white p-4">
+    <div class="container mx-auto flex justify-between items-center relative">
+        <a class="text-xl font-bold" href="#">Blogify</a>
+
+        <!-- Toggle Button (Mobile) -->
+        <button class="lg:hidden text-white focus:outline-none" id="menu-toggle">
+            ☰
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <% if(locals.user) {%>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/blog/add-new">AddBlog</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <%=user.name%>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/user/logout">Log Out</a></li>
+
+        <div class="hidden lg:flex lg:gap-6 space-x-2" id="navbar">
+            <ul class="flex flex-row lg:flex-row gap-14">
+                <li><a class="<%= currentPath === '/' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/">Home</a></li>
+                <% if(locals.user) { %>
+                    <li><a class="<%= currentPath === '/blog/add-new' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/blog/add-new"><i class="fa-solid fa-plus"></i> &nbsp;Blog</a></li>
+                    <li class="relative">
+                        <button class="hover:text-gray-300 flex items-center logout-toggle">
+                            <%= user.name %> &nbsp; <span class="arrow"><i class="fa-solid fa-caret-down"></i></span>
+                        </button>
+                        <ul class="absolute hidden bg-gray-800 text-white rounded-lg mt-2 shadow-md logout-menu">
+                            <li><a class="block px-4 py-2 hover:bg-gray-700" href="/user/logout">LogOut</a></li>
                         </ul>
                     </li>
-                    <% }else{ %>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/user/signup">Create Account</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/user/signin">SingIn</a>
-                        </li>
-                        <% } %>
+                <% } else { %>
+                    <li><a class="<%= currentPath === '/user/signup' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signup">Create Account</a></li>
+                    <li><a class="<%= currentPath === '/user/signin' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signin">Sign In</a></li>
+                <% } %>
             </ul>
         </div>
     </div>
-</nav>
-<% if (locals.error){ %>
-    <div class="m-4">
-        <div class="alert alert-danger" role="alert">
-            <%= locals.error %>
-        </div>
+    <div class="hidden flex-col bg-gray-900 w-full p-4" id="mobile-navbar">
+        <ul class="flex flex-col gap-4">
+            <li><a class="<%= currentPath === '/' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/">Home</a></li>
+            <% if(locals.user) { %>
+                <li><a class="<%= currentPath === '/blog/add-new' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/blog/add-new"><i class="fa-solid fa-plus"></i> &nbsp;Blog</a></li>
+                <li class="relative">
+                    <button class="hover:text-gray-300 flex items-center logout-toggle">
+                        <%= user.name %> &nbsp; <span class="arrow"><i class="fa-solid fa-caret-down"></i></span>
+                    </button>
+                    <ul class="absolute hidden bg-gray-800 text-white rounded-lg mt-2 shadow-md logout-menu">
+                        <li><a class="block px-4 py-2 hover:bg-gray-700" href="/user/logout">LogOut</a></li>
+                    </ul>
+                </li>
+            <% } else { %>
+                <li><a class="<%= currentPath === '/user/signup' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signup">Create Account</a></li>
+                <li><a class="<%= currentPath === '/user/signin' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signin">Sign In</a></li>
+            <% } %>
+        </ul>
     </div>
+</nav>
 
-    <% }%>
+<script>
+    const menuToggle = document.getElementById("menu-toggle");
+    const desktopNavbar = document.getElementById("navbar");
+    const mobileNavbar = document.getElementById("mobile-navbar");
 
+    function checkScreenSize() {
+        if (window.innerWidth < 1024) {
+            desktopNavbar.classList.add("hidden");
+        } else {
+            desktopNavbar.classList.remove("hidden");
+            mobileNavbar.classList.add("hidden");
+        }
+    }
 
-       
+    menuToggle.addEventListener("click", function () {
+        if (window.innerWidth < 1024) {
+            mobileNavbar.classList.toggle("hidden");
+        }
+    });
+
+ 
+    function setupLogoutToggle() {
+        document.querySelectorAll(".logout-toggle").forEach(button => {
+            button.addEventListener("click", function () {
+                const menu = this.nextElementSibling;
+                menu.classList.toggle("hidden");
+
+                const arrow = this.querySelector(".arrow i");
+                arrow.classList.toggle("fa-caret-down");
+                arrow.classList.toggle("fa-caret-up");
+            });
+        });
+    }
+
+    setupLogoutToggle();
+
+    window.addEventListener("resize", checkScreenSize);
+    checkScreenSize(); 
+</script>
