--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,26 +3,30 @@
 
 <head>
     <%- include("../partials/head") %>
-        <title>HomePage</title>
+        <title>Blogify</title>
 </head>
 
-<body>
+<body class="bg-gray-700">
     <%- include("../partials/nav.ejs") %>
-        <div class="container m-10 row row-cols-2">
-            <% blogs.forEach(blog=> {%>
-                <div class="col">
-                    <div class="card col mt-3" style="width: 18rem;">
-                        <img src="<%= blog.coverImgURL %>" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <%=blog.title %>
-                            </h5>
-                            <a href="/blog/<%= blog._id %>" class="btn btn-primary">view</a>
-                        </div>
+
+        <!-- <div class="text-4xl font-bold">Welcode To tailwind css</div> -->
+        <div class="container mx-auto my-10 grid lg:grid-cols-3 gap-6">
+            <% blogs.forEach(blog=> { %>
+                <div class="bg-slate-500 m-4 mt-0 shadow-lg rounded-lg overflow-hidden">
+                    <img src="<%= blog.coverImgURL %>" class="w-full  h-48 object-cover" alt="Blog Image">
+                    <div class="p-4">
+                        <h5 class="text-lg font-semibold">
+                            <%= blog.title %>
+                        </h5>
+                        <a href="/blog/<%= blog._id %>"
+                            class="mt-2 inline-block px-6 py-3 text-white font-bold rounded-lg bg-gradient-to-r from-gray-800 to-gray-600 hover:from-gray-900 hover:to-gray-700">
+                            View
+                        </a>
                     </div>
                 </div>
                 <% }); %>
         </div>
+
         <%- include('../partials/script') %>
 </body>
 
