Sign Up Login Add blog page update

--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -21,8 +21,8 @@
                         </ul>
                     </li>
                 <% } else { %>
-                    <li><a class="<%= currentPath === '/user/signup' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signup">Create Account</a></li>
-                    <li><a class="<%= currentPath === '/user/signin' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signin">Sign In</a></li>
+                    <li><a class="<%= currentPath === '/user/signin' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signin">Log In</a></li>
+                    <li><a class="<%= currentPath === '/user/signup' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signup">Sign Up</a></li>
                 <% } %>
             </ul>
         </div>
@@ -41,8 +41,8 @@
                     </ul>
                 </li>
             <% } else { %>
-                <li><a class="<%= currentPath === '/user/signup' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signup">Create Account</a></li>
-                <li><a class="<%= currentPath === '/user/signin' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signin">Sign In</a></li>
+                <li><a class="<%= currentPath === '/user/signin' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signin">Log In</a></li>
+                <li><a class="<%= currentPath === '/user/signup' ? 'text-red-500' : 'hover:text-gray-300' %>" href="/user/signup">Sign Up</a></li>
             <% } %>
         </ul>
     </div>
