--- a/partials/head.ejs
+++ b/partials/head.ejs
@@ -2,3 +2,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/styles.css">
 <script src="https://kit.fontawesome.com/ece4b86e58.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
