update OTP section

--- a/views/getOtp.ejs
+++ b/views/getOtp.ejs
@@ -21,13 +21,15 @@
                 <span class="text-gray-200 font-semibold hover:text-gray-800">
                     <%= email %>
                 </span>
-            <div class="mb-4 mt-10">
-                <label for="code" class="block text-black font-bold mb-2">Enter The OTP</label>
-                <input type="text" name="code" id="code"
+                <p class="font-mono text-sm">Not find,Please check your email <span class="text-red-700">Spam</span> folder..</p>
+                
+                <div class="mb-4 mt-10">
+                    <label for="code" class="block text-black font-bold mb-2">Enter The OTP</label>
+                    <input type="text" name="code" id="code"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 outline-none"
                     aria-describedby="emailHelp">
-            </div>
-            <button type="submit"
+                </div>
+                <button type="submit"
                 class="w-full font-bold bg-gradient-to-r from-gray-800 to-gray-600 hover:from-gray-900 text-white py-2 rounded-lg hover:bg-gray-600 transition">Submit</button>
 
         </form>
